<resources>
    <string name="app_name">Pwd_app</string>
    <string name="image">Image</string>
    <string name="building">building:</string>
    <string name="desc">Desc</string>
    <string name="date">Date</string>
    <string name="school_name">School Name</string>
    <string name="building_names">Building Names</string>
    <string name="history">History</string>
    <string name="workorder_name">WorkOrder Name</string>
    <string name="todo">TODO</string>
    <string name="enlarged_image">Enlarged image</string>
    <string name="status">Status</string>
    <string name="status_text">Status:</string>
    <string name="upload_images">Upload Images</string>
    <string name="upload_image">Upload image</string>
    <string name="enter_the_detail_description_here">Enter the detail description here</string>
    <string name="select_tags">Select Tags</string>
    <string name="select_image">Select Image</string>
    <string name="upload_image_button">Upload Image</string>
    <string name="save_image_to_local_db">Save Image to local Db</string>
    <string name="launch_logo">Launch logo</string>
    <string name="login_logo">Login logo</string>
    <string name="password">Password</string>
    <string name="toggle_password_visibility">Toggle Password Visibility</string>
    <string name="log_in">Log In</string>
    <string name="local_database">Local Database</string>
    <string name="school_name_">School Name</string>
    <string name="fill_details">fill details</string>
    <string name="fill_in_the_details_below">Fill in the details below</string>
    <string name="atc_office">ATC Office</string>
    <string name="po_office">PO Office</string>
    <string name="school">School:</string>
    <string name="visit_type">Visit Type:</string>
    <string name="workorder">Workorder :</string>
    <string name="building_">Building:</string>
    <string name="date_">Date:</string>
    <string name="start_survey">Start Survey</string>
    <string name="select_school">select_school</string>
    <string name="edit_icon">edit icon</string>
    <string name="submit_changes">Submit Changes</string>
    <string name="edit_details">Edit details</string>
    <string name="here_the_predefined_text_would_be_displayed">here the predefined text would be displayed</string>
    <string name="please_update_the_description">Please update the description</string>
    <string name="workorder_no">Workorder No</string>
    <string name="schools">School</string>
    <string name="fetch_workorder">fetch workorder</string>
    <string name="select_workorder">Select Workorder:</string>
    <string name="view_progress">view progress</string>
    <string name="workorder_progress_check">Workorder Progress Check</string>
    <string name="save_progress">save progress</string>
</resources>