<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mob"
    android:padding="16dp">

    <ProgressBar
        android:id="@+id/loadingProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="200dp"
        android:background="#D9FFFFFF"
        android:orientation="vertical"
        android:padding="16dp"
        tools:ignore="UselessParent">

        <Spinner
            android:id="@+id/select_atc_office"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@android:drawable/btn_dropdown"
            android:padding="12dp"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <!-- Add the "Select PO office" dropdown -->
        <Spinner
            android:id="@+id/select_po_office"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@android:drawable/btn_dropdown"
            android:padding="12dp"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <!-- Add the "Select Junior Engineer" dropdown -->
        <Spinner
            android:id="@+id/select_junior_engineer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@android:drawable/btn_dropdown"
            android:padding="12dp"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="2"
                android:background="@drawable/background_drawing_view_layout"
                android:drawableStart="@drawable/ic_baseline_password_24"
                android:drawablePadding="8dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/eye_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:contentDescription="@string/toggle_password_visibility"
                android:focusable="true"
                android:padding="12dp"
                android:src="@drawable/ic_baseline_visibility_24" />
        </LinearLayout>

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/background_drawing_view_layout"
            android:text="@string/log_in"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

    </LinearLayout>

</RelativeLayout>
